2001-03-08  Kris Rehberg

	*** AOLserver 3.3 RELEASED ***

2001-03-08 Jim Davidson

	* Added NsTclFinalizeThread() at end of Tcl TLS cleanup to
	finalize Tcl 8.x thread data.  This fix was the last hurdle for
	finalizing nsd8x.

2001-01-31  Kris Rehberg 

	* Makefile (MODULES): nsunix, nsvhr, and nsodbc moved to the
	Module Collection.

2001-01-16  Jim Davidson

	* Cleaned up sloppy use of the nsServer global wherever it's used.

2001-01-04  Kris Rehberg 

	* nsd/tclmisc.c: Ticket 13090.  ns_striphtml crashing-bug in nsd8x
	fixed.

2000-12-14  Kris Rehberg 

	* tcl/http.tcl: Corrected typo _ns_ns_http_readable.

	* nsd/dstring.c (Ns_DStringPrintf): Ticket 12765. Ns_DStringPrintf
	uses vsnprintf instead of vsprintf with specified buffer size.
	Thanks to "??".

	* nsd/return.c (Ns_ConnConstructHeaders): Ticket
	12764. If-Modified-Since (304) works with keepalive now. Thanks to
	Jim "??".

2000-12-13  Kris Rehberg 

	* include/Makefile.global: Builds with architecture-specific
	optimization options. Auto-detects architecture for most
	platforms.  Auto-select compiler and Purify usage from command
	line, e.g.:
	gmake nativeme=1   (all non-free Unix)
	gmake gccme=1      (some non-free Unix)
	gmake PURIFY=/path/to/purify/executable  (Solaris and Irix only)

	* nssock/Makefile*: now installs The Right Things in The Right
	Places.

	* nsd/Makefile: nsd8x is the default AOLserver now (nsd symlinks
	to nsd8x).

	* nsd/sample-config.tcl: Added some tuning parameters for easy
	reference.

2000-12-12  Kris Rehberg 

	* nsvhr/nsvhr.c (UDSProxy): More type changes.

	* nslog/nslog.c (Ns_ModuleInit): pointer-to-function casted.

	* nscp/nscp.c (GetLine): buf changed to char *; casted AcceptProc.
	
2000-12-12  Jim Davidson

	* nssock/sock.cpp: Fixed multiple-load problems, added sndbuf,
	rcvbuf, sendwait, and recvwait options. Added configurable backlog
	via Ns_SockListenEx. Fixed compile bugs for ssl. Restructured the