@@ -91,8 +91,8 @@
  */
 
 #define NSD_NAME             "AOLserver"
-#define NSD_VERSION	     "3.3"
-#define NSD_LABEL            "aolserver3_3"
+#define NSD_VERSION	     "3.3.1"
+#define NSD_LABEL            "aolserver3_3_1"
 #define NSD_TAG              "$Name$"
 #define NS_CONFIG_PARAMETERS "ns/parameters"
 #define NS_CONFIG_SERVERS    "ns/servers"
